# flexa

./: .gitignore  CMakeLists.txt  main.cxx  tmp
include/: mri.h
src/: mri.cpp
